Apllying bindings for catList

--- a/ud989-cat-clicker-ko-starter/index.html
+++ b/ud989-cat-clicker-ko-starter/index.html
@@ -5,7 +5,9 @@
         <title>Cat Clicker</title>
     </head>
     <body>
-        <ul id="cat-list"></ul>
+        <ul data-bind="foreach : catList">
+            <li data-bind="text: name"></li>
+        </ul>
         <div id="cat" data-bind="with: currCat">
             <h2 data-bind="text: name"></h2>
             <h2 data-bind="text: level"></h2>
