--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -36,7 +36,8 @@
         <script type="text/template" id="item-template">
             <div class="view">
             	<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-            	<label><%- title %><%= completed ? '--done' : '' %></label>
+                <label><%- title %><%= completed ? '--done' : '' %></label>
+                <button class="edit-btn"> </button>
             	<button class="destroy"></button>
             </div>
             <input class="edit" value="<%- title %>">
