Enabled priority class

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -38,7 +38,8 @@
             	<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
                 <label><%- title %><%= completed ? '--done' : '' %></label>
                 <button class="edit-btn"> </button>
-            	<button class="destroy"></button>
+                <button class="destroy"></button>
+                <button class="priority-btn"> </button>
             </div>
             <input class="edit" value="<%- title %>">
         </script>
